--- a/code/styles/components/_buckets.scss
+++ b/code/styles/components/_buckets.scss
@@ -1,13 +1,9 @@
 .buckets {
   @include clearfix;
-  margin-bottom: $spacing-vertical;
+  margin-bottom: -$spacing-vertical-lg;
 
   &__item {
     margin-bottom: $spacing-vertical-lg;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
 
     @include susy-breakpoint($bp-lg) {
       @include gallery(6 of 12);
