--- a/code/styles/layout/_structure.scss
+++ b/code/styles/layout/_structure.scss
@@ -30,7 +30,7 @@ body {
     padding: 0 $padding-horizontal-fluid;
 
     > :last-child {
-      margin-bottom: 0;
+      //margin-bottom: 0;
     }
   }
 
